修复向量数据库相关问题